# lambda-channel-benchmark

./: .gitignore  Cargo.toml  README.md
cloudlab/: EXPERIMENT_PRINCIPLES.md  README.md
cloudlab/examples/: allocate-9node.ini  allocate.ini  aws.env.example  cloudlab.ini
cloudlab/scripts/entrypoints/: allocate_profile.py  check_experiment_ready.py  deploy.py  gc_aws_resources.py  kill_expr_servers.py  package.py  record_single.py  refresh_nodes.py  run_proxy_experiment.py  start_expr_servers.py
cloudlab/scripts/lib/: nodes.py  parallel.py  ssh.py  workflow_paths.py
cloudlab/scripts/remote/: prepare_local_disk.py  remote_build.py
cloudlab/scripts/workflows/: multi_node_blob_multi_getter.py  multi_node_blob_single_getter.py  multi_node_channel_single_sender_multi_receiver.py  single_node_blob_put.py  single_node_metadata.py
config/: local-experiment.toml
config/experiments/: README.md
config/experiments/blob/: fallback-fetch.toml  get-materialize.toml  multi-getter-p2p-16m.toml  multi-getter-s3-128m.toml  multi-getter-s3-16m.toml  multi-getter-s3-32b.toml  p2p-local-hit.toml  p2p-peer-fetch.toml  persist-upload.toml  put-128m.toml  put-16m.toml  put.toml  (+9 more)
config/instances/: cloudlab-c6620-9.toml  local-two.toml  single-node.toml
src/: blob_store_factory.rs  cli.rs  config.rs  main.rs  metadata_store_factory.rs  output.rs  payload_file.rs  roles.rs
src/driver/: latency.rs  mod.rs  paced.rs  sweep.rs
src/experiments/: dispatcher.rs  mod.rs
src/rpc/: address.rs  client.rs  mod.rs  protocol.rs
src/workloads/: metadata.rs  mod.rs  receiver.rs  sender.rs
(+132 files in other folders)
